istio/demo/weather/weather-v2.yml
#apiVersion: v1
#kind: Service
#metadata:
#  name: forecast-v2
#  namespace: weather
#  labels:
#    app: forecast-v2
#    service: frecast-v2
#spec:
#  externalIPs:
#    - 10.211.55.201
#  ports:
#    - port: 3000
#      name: http
#      targetPort: 80
#  selector:
#    app: forecast-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  namespace: weather
  labels:
    app: frontend
    version: v2
spec:
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
