istio/demo/weather/weather-v1.yml
##################################################################################################
# Frontend service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: weather
  labels:
    app: frontend
    service: frontend
spec:
  externalIPs:
    - 10.211.55.201
  ports:
    - port: 3000
      name: http
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: weather
  name: frontend-v1
  labels:
    app: frontend
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
        - name: frontend
          image: istioweather/frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
  selector:
    matchLabels:
      app: frontend
      version: v1
---
##################################################################################################
# Advertisement service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: advertisement
  namespace: weather
  labels:
    app: advertisement
    service: advertisement
spec:
  externalIPs:
    - 10.211.55.201
  ports:
    - port: 3003
      name: http
  selector:
    app: advertisement
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advertisement-v1
  namespace: weather
  labels:
    app: advertisement
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: advertisement
        version: v1
    spec:
      containers:
        - name: advertisement
          image: istioweather/advertisement:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
  selector:
    matchLabels:
      app: advertisement
      version: v1
---
##################################################################################################
# Forecast service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: forecast
  namespace: weather
  labels:
    app: forecast
    service: forecast
spec:
  externalIPs:
    - 10.211.55.201
  ports:
    - port: 3002
      name: http
  selector:
    app: forecast
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecast-v1
  namespace: weather
  labels:
    app: forecast
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: forecast
        version: v1
    spec:
      containers:
        - name: forecast
          image: istioweather/forecast:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
  selector:
    matchLabels:
      app: forecast
      version: v1
---
